Cleaned up screen connection and unified the look of the screens.

--- a/DentalHospitalDatabase/DentalHospitalDatabase.csproj
+++ b/DentalHospitalDatabase/DentalHospitalDatabase.csproj
@@ -64,6 +64,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Login Screen.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -77,6 +81,9 @@
     </Compile>
     <Compile Include="Dental.xaml.cs">
       <DependentUpon>Dental.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Login Screen.xaml.cs">
+      <DependentUpon>Login Screen.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
