Doctor Patient-View

--- a/DentalHospitalDatabase/App.config
+++ b/DentalHospitalDatabase/App.config
@@ -6,6 +6,9 @@
         <add name="DentalHospitalDatabase.Properties.Settings.dbHospitalConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\dbHospital.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="DentalHospitalDatabase.Properties.Settings.HospitalConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Hospital.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
